[package]
name = "d20-space-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.3", features = ["default", "headers", "ws"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }

tokio = { version = "1.15.0", features = ["full"] }

serde = { version = "1.0.133", features = ["derive"]}
serde_json = "1.0.73"
toml = "0.5.8"

async-trait = "0.1.52"
anyhow = "1.0.52"

image = "0.23.14"
mime = "0.3.16"
